fix: secondary sidebar collapsed

--- a/app/src/views/containers/RulesContainer/RulesSidebar/RulesSidebar.css
+++ b/app/src/views/containers/RulesContainer/RulesSidebar/RulesSidebar.css
@@ -1,4 +1,5 @@
 .rules-sidebar-container {
+  height: 100%;
   background-color: var(--app-secondary-sidebar-background);
 }
 
